# ariel-os

./: .gitignore  Cargo.toml  ariel-os-cargo.toml  crates-io-patches.toml  laze-project.yml
.github/workflows/: build.yml  main.yml
boards/: adafruit-feather-nrf52840-express.yaml  adafruit-feather-nrf52840-sense.yaml  arduino-uno-q.yaml  ariel-chips.yaml  bbc-microbit-v1.yaml  bbc-microbit-v2.yaml  cy8cproto-062-4343w.yaml  dfrobot-firebeetle2-esp32-c6.yaml  dwm1001.yaml  espressif-esp32-c3-devkit-rust-1.yaml  espressif-esp32-c3-lcdkit.yaml  espressif-esp32-c6-devkitc-1.yaml  espressif-esp32-devkitc.yaml  espressif-esp32-s2-devkitc-1.yaml  espressif-esp32-s3-devkitc-1.yaml  heltec-wifi-lora-32-v3.yaml  makerdiary-nrf52840-mdk-usb-dongle.yaml  makerdiary-nrf9151-connect-kit.yaml  native.yaml  nordic-thingy-91-x.yaml  nrf52840-mdk.yaml  nrf52840dk.yaml  nrf52dk.yaml  nrf5340dk.yaml  nrf54lm20dk.yaml  nrf9151-dk.yaml  nrf9160dk.yaml  particle-xenon.yaml  rpi-pico-w.yaml  rpi-pico.yaml  rpi-pico2-w.yaml  rpi-pico2.yaml  seeedstudio-lora-e5-mini.yaml  seeedstudio-xiao-esp32c6.yaml  seeedstudio-xiao-nrf52840-plus.yaml  st-b-l475e-iot01a.yaml  st-nucleo-c031c6.yaml  st-nucleo-f042k6.yaml  st-nucleo-f072rb.yaml  st-nucleo-f303re.yaml  (+14 more)
book/src/: SUMMARY.md  adding-board-support.md  bluetooth.md  build-system.md  clocks.md  development-processes.md  global-allocator.md  memory-layout.md  support_matrix.html
book/src/boards/: cy8cproto-062-4343w.md  index.md  makerdiary-nrf9151-connect-kit.md  nrf54lm20-dk.md  st-nucleo-f072rb.md  st-nucleo-g431rb.md
book/src/chips/: cy8c624abzi-s2d44.md  index.md  nrf52840.md  nrf54lm20.md  nrf9151.md  stm32f072rb.md  stm32g431rb.md
book/templates/: SUMMARY.md.tmpl
doc/: support_matrix.yml
examples/: laze.yml
examples/blinky/src/: pins.rs
examples/device-metadata/src/: main.rs
examples/embassy-net-tcp/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/hello-world/src/: led.rs  ledc.rs  main.rs
examples/http-server/src/: main.rs
examples/i2c-scanner/: laze.yml
examples/i2c-scanner/src/: pins.rs
examples/log/: laze.yml
examples/mqtt-sn-client/src/: main.rs
examples/sensors-debug/src/: pins.rs
examples/tcp-echo/: laze.yml
examples/tcp-echo/src/: main.rs
examples/thermometer/: Cargo.toml
examples/thermometer/src/: pins.rs
examples/thread-async-interop/src/: main.rs
examples/threading-channel/: laze.yml
examples/threading-event/: laze.yml
examples/uart-echo/: Cargo.toml  README.md  laze.yml
examples/uart-echo/src/: main.rs
examples/ulanzi/: Cargo.toml  laze.yml
examples/ulanzi/src/: lavalamp.rs  main.rs  scrolltext.rs
examples/usb-keyboard/src/: pins.rs
examples/workqueue/: Cargo.toml  laze.yml
examples/workqueue/src/: main.rs
scripts/: all-cargo-files.rs
src/ariel-os/: Cargo.toml
src/ariel-os-alloc/: Cargo.toml
src/ariel-os-alloc/src/: lib.rs
src/ariel-os-boards/: build.rs  laze.yml
src/ariel-os-boards/src/: adafruit-feather-nrf52840-express.rs  adafruit-feather-nrf52840-sense.rs  arduino-uno-q.rs  bbc-microbit-v1.rs  bbc-microbit-v2.rs  cy8cproto-062-4343w.rs  dfrobot-firebeetle2-esp32-c6.rs  dwm1001.rs  espressif-esp32-c3-devkit-rust-1.rs  espressif-esp32-c6-devkitc-1.rs  espressif-esp32-devkitc.rs  espressif-esp32-s3-devkitc-1.rs  heltec-wifi-lora-32-v3.rs  lib.rs  makerdiary-nrf52840-mdk-usb-dongle.rs  makerdiary-nrf9151-connect-kit.rs  nordic-thingy-91-x-nrf5340-app.rs  nordic-thingy-91-x-nrf9151.rs  nrf52840-mdk.rs  nrf52840dk.rs  nrf52dk.rs  nrf5340dk-app.rs  nrf5340dk-net.rs  nrf5340dk.rs  nrf54lm20dk-app.rs  nrf9151-dk.rs  nrf9160dk-nrf9160.rs  particle-xenon.rs  rpi-pico.rs  seeedstudio-lora-e5-mini.rs  seeedstudio-xiao-esp32c6.rs  seeedstudio-xiao-nrf52840-plus.rs  st-b-l475e-iot01a.rs  st-nucleo-c031c6.rs  st-nucleo-f042k6.rs  st-nucleo-f401re.rs  st-nucleo-f767zi.rs  st-nucleo-g431rb.rs  st-nucleo-h753zi.rs  st-nucleo-h755zi-q.rs  (+6 more)
src/ariel-os-buildutils/: Cargo.toml
src/ariel-os-buildutils/src/: lib.rs
src/ariel-os-coap/: Cargo.toml
src/ariel-os-debug/src/: lib.rs
src/ariel-os-embassy/: Cargo.toml
src/ariel-os-embassy-common/src/: uart.rs
src/ariel-os-embassy/src/: asynch.rs  ble.rs  debug_uart.rs  lib.rs
src/ariel-os-esp/: Cargo.toml
src/ariel-os-esp/src/: gpio.rs  lib.rs
src/ariel-os-hal/: Cargo.toml
src/ariel-os-hal/src/: hal.rs  lib.rs
src/ariel-os-macros/src/: task.rs
src/ariel-os-mqttsn-async/src/: lib.rs
src/ariel-os-native/: Cargo.toml
src/ariel-os-native/src/: hwrng.rs  lib.rs
src/ariel-os-nrf/: Cargo.toml
src/ariel-os-nrf-time/: Cargo.toml
src/ariel-os-nrf/src/: ble.rs  identity.rs  lib.rs  uart.rs
src/ariel-os-power/src/: lib.rs
src/ariel-os-psoc/: Cargo.toml
src/ariel-os-psoc/src/: gpio.rs  lib.rs
src/ariel-os-random/src/: lib.rs
src/ariel-os-rp/: Cargo.toml  build.rs
src/ariel-os-rp/src/: cyw43.rs  storage.rs
src/ariel-os-rt/: Cargo.toml  build.rs  linkme-psoc.x
src/ariel-os-rt/src/: lib.rs
src/ariel-os-stm32/: Cargo.toml
src/ariel-os-stm32/src/: ethernet.rs  identity.rs  lib.rs  uart.rs
src/ariel-os-storage/: build.rs
src/ariel-os-threads/src/: ensure_once.rs  lib.rs  thread_flags.rs  threadlist.rs
src/ariel-os-utils/src/: env.rs
src/ariel-os/src/: lib.rs
src/riot-rs/: Cargo.toml
src/riot-rs-bench/src/: lib.rs
src/riot-rs-boards/: Cargo.toml
src/riot-rs-boards/ai-c3/: Cargo.toml
src/riot-rs-boards/expressif-esp32-wroom-32/: Cargo.toml
src/riot-rs-boards/src/: lib.rs
src/riot-rs-debug/: Cargo.toml
src/riot-rs-embassy/: Cargo.toml
src/riot-rs-embassy-common/: Cargo.toml
src/riot-rs-embassy-common/src/: lib.rs
src/riot-rs-esp/: Cargo.toml
src/riot-rs-nrf/: Cargo.toml
src/riot-rs-rt/: Cargo.toml  build.rs  linkme-esp32-fixup.x  linkme.x
src/sensors/ariel-os-sensor-aht20/: Cargo.toml
tests/i2c-controller/: laze.yml
tests/spi-loopback/: laze.yml
tests/spi-main/: laze.yml
tests/threading-dynamic-prios/: laze.yml
tests/threading-fpu/: laze.yml
tests/threading-lock/: laze.yml
tests/threading-mutex/: laze.yml
tests/uart-loopback/: laze.yml
(+47 files in other folders)
