[package]
name = "ariel-os-sensor-aht20"
# This crate is versioned separately from Ariel OS.
version = "0.1.0"
edition.workspace = true
# This crate's MSRV is decoupled from Ariel OS's.
rust-version = "1.90"
repository.workspace = true
license.workspace = true

[dependencies]
ariel-os-hal = { workspace = true, features = ["i2c"] }
ariel-os-log = { workspace = true }
ariel-os-sensors = { workspace = true, features = ["max-sample-min-count-2"] }
ariel-os-sensors-utils = { workspace = true }
crc = { version = "3.4.0" }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
portable-atomic = { workspace = true }

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }
embassy-executor = { workspace = true, features = [
  "platform-std",
  "executor-thread",
] }
embassy-futures = { workspace = true }
embassy-time = { workspace = true, features = ["std"] }

[features]
_test = []

[lints]
workspace = true
